--- a/css/style.css
+++ b/css/style.css
@@ -33,21 +33,18 @@ td {
 }
 
  .reset {
-  color:rgb(32, 62, 171);
+  color: white;
+  background: url(../images/reset.png);
   background-size: cover;
   padding: 15px;
   font-weight: bold;
   font-size: 30px;
   border-radius: 25px;
   position: absolute;
-  text-align: center;
   width: 120px;
-  height: 140px;
-  top: 50%;
-  left: 50%;
-  margin-left: -100px;
-  margin-top: -120px;
-  display: none;
+  margin-left: -57px;
+  margin-top: 88px;
+  /* display: none; */
 
 }
 .wrapper {
